# hrconnect

./: .gitignore  README.md  etiquetador.py  info.txt  main.py  pyproject.toml  setup.py
src/: __main__.py  helloworld.py
src/config/: AppConfig.py  BeanManager.py  config.properties  cu_by_role.json  in_memory_daily_staff_sign_db.json  in_memory_notifications_db.json  in_memory_open_positions_db.json  in_memory_positions_db.json  in_memory_users_db.json  mock_users_db.json  password_salt_key.env  roles.config.json
src/hrconnect/: __main__.py
src/hrconnect/config/: cu_by_role.json  salt_key
src/hrconnect/menu/: Menu.py
src/menu/: Menu.py
src/notifications/dao/: AbstractNotificationDAO.py  NotificationInMemoryDAO.py
src/notifications/model/: Notification.py
src/office_services_check/service/: OfficeServicesCheckService.py
src/open_position/dao/: AbstractOpenPositionDAO.py  OpenPositionInMemoryDAO.py
src/open_position/model/: OpenPosition.py
src/option/model/: AbstractOption.py  AbstractScheduledOption.py
src/option/service/: OptionService.py
src/option/use-cases/: M01_CU01.py  M02_CU01.py  M03_CU01.py  M03_CU02.py  M04_CU01.py
src/position/dao/: AbstractPositionDAO.py  PositionInMemoryDAO.py
src/position/model/: Position.py
src/staff_sign/dao/: AbstractStaffSignDAO.py  StaffSignInMemoryDAO.py
src/staff_sign/model/: StaffSign.py
src/user/dao/: AbstractUserDAO.py  UserInMemoryDAO.py  mock_users_db.json
src/user/model/: User.py
src/user/role/: Role
src/utils/: DateUtils.py  EnctryptUtils.py  IOUtils.py  Logging.py
(+21 files in other folders)
