[project]
name = "src"
version = "0.1.0"
description = "HR Connect"
authors = [
    {name = "Arbio, Nicolás Gabriel", email = "nicolasarbio@outlook.com"},
    {name = "Cobice, Leonardo", email = "atomluxssl@gmail.com"},
    {name = "Guerchicoff Adamo, Tomás", email = "adamo19t@gmail.com"},
    {name = "Zaragoza, Yago", email = "yagozaragoza04@gmail.com"}
]
dependencies = [
    "py-bcrypt==0.4"
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
